fix: :adhesive_bandage: fix alignment of rows in sensor lists

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1112,6 +1112,7 @@ input:focus {
 
 #sensor-list-content ul li {
   padding: 2px !important;
+  overflow: hidden !important;
 }
 
 #colors-menu ul li {
